--- a/eslint-smart-senior/package.json
+++ b/eslint-smart-senior/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "tsc"
+  },
   "author": "Nicolas Aversa",
   "license": "ISC",
   "devDependencies": {
     "@types/eslint": "8.*",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "5.*",
     "@typescript-eslint/parser": "5.*",
     "eslint": "8.*",
